# splita

./: .gitignore  404.html  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  PRD_v0.2.md  PRD_v0.3_research.md  PRD_v0.4_industry.md  README.md  SECURITY.md  TODO.md  TRACKER.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api/: index.html
benchmarks/: index.html
comparison/: index.html
contributing/: index.html
cookbook/ecommerce/: index.html
cookbook/marketplace/: index.html
cookbook/mobile/: index.html
cookbook/subscription/: index.html
docs/: comparison.md  contributing.md  index.md  references.md
docs/api/: index.md
docs/cookbook/: ecommerce.md  marketplace.md  mobile.md  subscription.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: bandits.md  bayesian.md  causal.md  data-quality.md  experiment.md  planning.md  sequential.md  variance-reduction.md
examples/: kaggle_patterns.py  quickstart.py  real_world_validation.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/bandits/: index.html
guide/bayesian/: index.html
guide/causal/: index.html
guide/data-quality/: index.html
guide/experiment/: index.html
guide/planning/: index.html
guide/sequential/: index.html
guide/variance-reduction/: index.html
references/: index.html
search/: search_index.json
src/splita/: __init__.py  __main__.py  _advisory.py  _experimental.py  _playground_app.py  _types.py  _utils.py  _validation.py  audit_trail.py  auto.py  check.py  compare.py  diagnose.py  errors.py  explain.py  log.py  meta_analysis.py  monitor.py  playground.py  plugins.py  power_report.py  recommend.py  report.py  serve.py  simulate.py  verbose.py  what_if.py  widget.py
tests/: conftest.py  test_advisory.py  test_audit_trail.py  test_auto.py  test_check.py  test_compare.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_datasets.py  test_diagnose.py  test_errors.py  test_explain.py  test_latex_export.py  test_log.py  test_meta_analysis.py  test_migrate.py  test_monitor.py  test_multilingual_explain.py  test_notify.py  test_pandas_accessor.py  test_performance.py  test_playground.py  test_plugins.py  test_polars_support.py  test_power_report.py  test_recommend.py  test_report.py  test_serve.py  test_simulate.py  test_smoke.py  test_statistical_audit.py  test_types.py  test_utils.py  test_validation.py  test_what_if.py  test_widget.py
tests/bandits/: test_bayesian_stopping.py  test_lints.py  test_linucb.py  test_offline_evaluation.py  test_thompson.py
tests/causal/: test_bipartite.py  test_cluster.py  test_continuous_treatment.py  test_did.py  test_doubly_robust.py  test_dynamic_effects.py  test_geo_experiment.py  test_instrumental_variables.py  test_interference.py  test_marketplace.py  test_mediation.py  test_propensity_matching.py  test_rdd.py  test_surrogate.py  test_surrogate_index.py  test_switchback.py  test_synthetic_control.py  test_tmle.py  test_transportability.py
tests/core/: test_bayesian.py  test_causal_forest.py  test_correction.py  test_dilution.py  test_experiment.py  test_funnel.py  test_hte.py  test_interleaving.py  test_metric_decomposition.py  test_mixed_effects.py  test_multi_objective.py  test_objective_bayesian.py  test_oec.py  test_optimal_proxy.py  test_permutation.py  test_power_simulation.py  test_quantile.py  test_risk_aware.py  test_sample_size.py  test_scenarios.py  test_srm.py  test_stratified.py  test_survival.py  test_triggered.py
tests/design/: test_adaptive_enrichment.py  test_bayesian_optimization.py  test_budget_split.py  test_factorial.py  test_pairwise.py  test_response_adaptive.py
tests/diagnostics/: test_aa.py  test_carryover.py  test_flicker.py  test_nonstationarity.py  test_novelty.py  test_phacking.py  test_pre_experiment.py  test_randomization.py  test_timeseries.py
tests/governance/: test_conflict.py  test_guardrail.py  (+1 more)
(+127 files in other folders)
