[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splita"
version = "0.1.0"
description = "A/B test analysis that is correct by default, informative by design, and composable by construction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nareman" },
]
keywords = ["ab-testing", "experimentation", "statistics", "causal-inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.2",
]
viz = [
    "matplotlib>=3.5",
]
widget = [
    "ipywidgets>=8.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
playground = [
    "streamlit>=1.30",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/Naareman/splita"
Documentation = "https://Naareman.github.io/splita"
Repository = "https://github.com/Naareman/splita"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "mkdocs-material>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/splita"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (simulation-heavy)",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["UP038"]  # isinstance(x, (A, B)) is fine — UP038 is overly strict

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff.lint.per-file-ignores]
"src/splita/explain.py" = ["RUF001", "E501"]
"src/splita/_playground_app.py" = ["E501"]
"src/splita/report.py" = ["E501"]
"src/splita/_types.py" = ["E501"]
"src/splita/serve.py" = ["B904"]
"src/splita/what_if.py" = ["SIM108"]
